--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,6 +9,22 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --header-bg-img: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
+  --main-font: "IBM Plex mono";
+  --main-text-size: 18px;
+  --accent-color: #ff0070;
+  --h1-text-color: #db00ff;
+  --menu-text-color: #ff0070;
+  --title-bg-color: #ff0070;
+  --decor-text-color: #000028;
+  --decor-color: #ff0070;
+  --card__title-color: #ff0070;
+  --card__text: #f1b2ce;
+  --button-border: rgb(255, 0, 112, 0.4);
+  --focus-button: #ff0070;
+  --focus__link: #f1b2ce;
+  --button-active: #ff0070;
 }
 
 .theme-dark .page {
