--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 h1,
@@ -20,6 +21,8 @@ h5,
 h6,
 p {
   margin: 0;
+  font-weight: normal;
+  font-size: 100%;
 }
 
 ul {
