--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,29 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+  --header-bg-img: url(../images/cover-image-light.png);
+  --bg-color: none;
+  --main-font: "IBM Plex mono";
+  --main-text-size: 18px;
+  --accent-color: #ff8dcb;
+  --h1-text-color: #ffc2e6;
+  --menu-text-color: #353430;
+  --title-bg-color: #ff8dcb;
+  --decor-text-color: #353430;
+  --decor-color: #353430;
+  --card__title-color: #353430;
+  --card__text: #353430;
+  --button-border: rgb(50, 49, 45, 0.4);
+  --focus-button: #353430;
+  --focus__link: #353430;
+  --button-active: #353430;
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+}
+
+.theme-light .header_rec {
+  display: none;
 }
