--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,416 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  background-image: var(--header-bg-img);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: var(--main-font), sans-serif;
+  font-size: var(--main-text-size);
+  background-repeat: no-repeat;
+
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr min-content 1fr;
+  block-size: 100vh;
+  min-block-size: 668px;
+  inline-size: 100%;
+  padding-inline: 10px;
+  padding-block: 10px;
+  box-sizing: border-box;
+}
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before {
+  content: "";
+  justify-self: end;
+  inline-size: 25px;
+  block-size: 25px;
+  top: 10px;
+  right: 10px;
+  border-top: 1px solid var(--decor-color);
+  border-right: 1px solid var(--decor-color);
+  position: absolute;
+  z-index: 2;
+}
+
+.decorated-zone::after {
+  content: "";
+  justify-self: end;
+  inline-size: 25px;
+  block-size: 25px;
+  bottom: 10px;
+  left: 10px;
+  border-bottom: 1px solid var(--decor-color);
+  border-left: 1px solid var(--decor-color);
+  position: absolute;
+  z-index: 2;
+}
+
+.header_rec {
+  min-block-size: 26px;
+  position: relative;
+}
+
+.header_rec::before {
+  content: "REC";
+  position: absolute;
+  z-index: -1;
+  right: 28px;
+  top: 0px;
+}
+
+.header_rec::after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  background-color: var(--menu-text-color);
+  inline-size: 9px;
+  block-size: 9px;
+  z-index: -1;
+  box-shadow: 0 0 4px 2px;
+  top: 8px;
+  right: 9px;
+}
+
+.header__theme-menu {
+  inline-size: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 65px 1fr;
+  color: var(--menu-text-color);
+}
+
+.title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  color: var(--h1-text-color);
+  font-weight: bold;
+  padding-block: 65px 55px;
+}
+
+.header__shadow {
+  text-shadow: 4px 4px 0px var(--accent-color);
+}
+
+.header__text {
+  justify-self: end;
+  inline-size: 355px;
+  padding-block-end: 56px;
+}
+
+.content {
+  background-color: var(--bg-color);
+  inline-size: 100%;
+  padding-inline: 10px;
+  padding-block-start: 39px;
+}
+
+.title-decor {
+  color: var(--decor-text-color);
+  line-height: 23.4px;
+  text-align: left;
+  background-color: var(--title-bg-color);
+}
+
+.content-section {
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  padding-block-end: 50px;
+  overflow-wrap: break-word;
+}
+
+.content-section__list-accent {
+  font-weight: bold;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 11.5px;
+  line-height: 18px;
+  inline-size: 100%;
+  align-items: flex-end;
+  grid-row: 2;
+}
+
+.header__theme-menu-button {
+  margin: 0;
+  background-color: transparent;
+  border: none;
+  text-transform: lowercase;
+  width: 70px;
+  height: 26px;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+  border: 1px solid var(--button-active);
+}
+
+.card__list {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.card__title {
+  color: var(--card__title-color);
+  line-height: 23.4px;
+}
+
+.card__text {
+  color: var(--card__text);
+  line-height: 23.4px;
+  text-align: left;
+  padding-block-start: 10px;
+}
+
+.five__tips {
+  margin-block-end: 20px;
+}
+
+.card__text a {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.content__figure {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  box-sizing: border-box;
+  margin: 0;
+  padding-block-start: 10px;
+  padding-block-end: 40px;
+  inline-size: 100%;
+}
+
+.content__picture {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr;
+  block-size: 100vh;
+  min-block-size: 668px;
+  background-color: var(--bg-color);
+  align-items: center;
+  text-align: center;
+  inline-size: 100%;
+}
+
+.footer__shadow {
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.link:hover {
+  border-bottom: 1px solid var(--card__text);
+}
+
+.link:focus {
+  outline: none;
+}
+
+.link:focus-visible {
+  outline: 1px solid var(--focus__link);
+  outline-offset: 2px;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--button-border);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid var(--focus-button);
+}
+
+@media (width >= 768px) {
+  .header {
+    min-block-size: 1024px;
+    padding-inline: 20px;
+    padding-block: 20px;
+  }
+
+  .decorated-zone::before {
+    content: "";
+    top: 20px;
+    right: 20px;
+  }
+
+  .decorated-zone::after {
+    content: "";
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .header__theme-menu {
+    grid-template-rows: 173px 1fr;
+  }
+
+  .content {
+    padding-inline: 20px;
+    padding-block-start: 60px;
+  }
+
+  .title:not(.footer .title) {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    inline-size: calc(100% + 40px);
+    inset-inline-end: 20px;
+    position: relative;
+    padding-block: 173px 162px;
+  }
+
+  .header__text {
+    inline-size: 50%;
+    padding-block-end: 183px;
+  }
+
+  .content-section {
+    padding-block-end: 80px;
+  }
+
+  .content-section:not(.content-section__attention) {
+    grid-template-columns: 1fr 2fr;
+    padding-block-end: 80px;
+  }
+
+  .card__title {
+    grid-column: 1;
+    max-inline-size: 236px;
+  }
+
+  .card__content:not(.card__list__attention) {
+    grid-column: 2;
+  }
+
+  .content__figure {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 192px 1fr 318px;
+    gap: 20px;
+    padding-block-start: 20px;
+    padding-block-end: 60px;
+  }
+
+  .content__picture:nth-child(1) {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+  .content__picture:nth-child(2) {
+    grid-column: 3;
+    grid-row: 1/3;
+  }
+
+  .content__picture:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2/-1;
+  }
+
+  .content__picture:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .content__picture:nth-child(5) {
+    grid-column: 2/-1;
+    grid-row: 3;
+  }
+
+  .footer {
+    padding-inline: 20px;
+    min-block-size: 1024px;
+  }
+}
+
+@media (width >= 1024px) {
+  .header {
+    min-block-size: 768px;
+  }
+
+  .header__theme-menu {
+    grid-template-columns: 1fr min-content;
+    grid-template-rows: 1fr;
+    align-items: start;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    padding-block-start: 0px;
+    grid-column: 1;
+    grid-row: 1;
+    justify-content: center;
+  }
+
+  .header_rec {
+    grid-row: 1;
+    grid-column: 2;
+  }
+
+  .title:not(.footer .title) {
+    padding-block: 273px 114px;
+  }
+
+  .card__title {
+    max-inline-size: 315px;
+  }
+
+  .card__list {
+    min-inline-size: 649px;
+  }
+
+  .card__list__attention {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .content__figure {
+    grid-template-rows: 260px 1fr 433px;
+  }
+
+  .footer {
+    min-block-size: 768px;
+  }
+
+  .footer__shadow {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --header-bg-img: url(../images/cover-image-light.png);
+    --bg-color: none;
+    --main-font: "IBM Plex mono";
+    --main-text-size: 18px;
+    --accent-color: #ff8dcb;
+    --h1-text-color: #ffc2e6;
+    --menu-text-color: #353430;
+    --title-bg-color: #ff8dcb;
+    --decor-text-color: #353430;
+    --decor-color: #353430;
+    --card__title-color: #353430;
+    --card__text: #353430;
+    --button-border: rgb(50, 49, 45, 0.4);
+    --focus-button: #353430;
+    --focus__link: #353430;
+    --button-active: #353430;
+  }
 }
